Simphony-OpenFOAM CHANGELOG
======================


Release 0.1.5
-------------

* Compatibility with OpenFoam version 2.4
* Mixture model included
* wrapper main classes (IO and internal) named to Wrapper
* pimpleFoam as default solver in both wrappers (#60)
* bug fix (#57)
* internalwrapper added to coveragerc (#54)
* single CUBA extension file (#34)

Release 0.1.5
-------------

* Wrapper compatibility to common-0.2.0 (#51)
* Unittest data generation on the fly (#25)

Release 0.1.4
-------------

* Combine internal and IO interface libraries


Release 0.1.3
-------------

* Fix bug in foam template creation and example file (#27)

Release 0.1.2
-------------

* Internal Interfaces wrapper added (#23)

Release 0.1.1
-------------

* Surface tension setup fixed (#21)


Release 0.1.0
-------------

* Initial release: IO interface for running OpenFOAM engine


