@@ -27,3 +27,4 @@ class CUBAExt(IntEnum):
     VISCOSITY_MODEL_COEFFS = 17
     EXTERNAL_BODY_FORCE_MODEL = 18
     EXTERNAL_BODY_FORCE_MODEL_COEFFS = 19
+    STRESS_MODEL = 20
