@@ -243,6 +243,14 @@ def modify_files(case, startTime, SP, BC, solver, SPExt, CMExt):
             for coeff in viscosity_model_coeffs:
                 control["phase2"][vmc][coeff] = viscosity_model_coeffs[coeff]
 
+        if CUBAExt.STRESS_MODEL in SPExt:
+                    control["stressModel"] =\
+                        SPExt[CUBAExt.STRESS_MODEL]
+        else:
+            error_str = "Stress model not specified"
+            raise ValueError(error_str)
+
+
         if CUBAExt.RELATIVE_VELOCITY_MODEL in SPExt:
                     control["relativeVelocityModel"] =\
                         SPExt[CUBAExt.RELATIVE_VELOCITY_MODEL]
